syntax = "proto3";

package shopagolic.productcatalog.v1beta1;

option go_package = "github.com/demeero/shopagolic/services/proto/gen/go/shopagolic/productcatalog/v1beta1";

import "google/protobuf/timestamp.proto";
import "shopagolic/money/v1/money.proto";

service ProductCatalogService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {}
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
  rpc SearchProducts(SearchProductsRequest) returns (SearchProductsResponse) {}
}

enum SortKey {
  SORT_KEY_UNSPECIFIED = 0;
  SORT_KEY_NAME = 1;
  SORT_KEY_CREATED_AT = 2;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  money.v1.Money price = 5;
  repeated string categories = 6;
  google.protobuf.Timestamp created_at = 7;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  string picture = 3;
  money.v1.Money price = 4;
  repeated string categories = 5;
}

message CreateProductResponse {
  string id = 1;
}

message ListProductsRequest {
  int32 page_size = 1;
  string page_token = 2;
  SortKey sort_key = 3;
  bool asc = 4;
}

message ListProductsResponse {
  repeated Product products = 1;
  string next_page_token = 2;
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message SearchProductsRequest {
  string query = 1;
}

message SearchProductsResponse {
  repeated Product products = 1;
}